drilldown JSON mod

--- a/statseo.html
+++ b/statseo.html
@@ -261,7 +261,7 @@ text {
 	        var websiteURL = nameElement.value;
 	        var websiteSplit = websiteURL.split(".");
 
-	        document.getElementById("someDiv").innerHTML + websiteURL;
+	        document.getElementById("someDiv").innerHTML += websiteURL;
 	        
 	        return websiteSplit[1];
 	      }
