--- a/statseo.html
+++ b/statseo.html
@@ -258,7 +258,7 @@ var websiteName = websiteSplit[1];
 	<script>
 
 	
-	var websiteName = function doStuff()
+	function doStuff()
 	      {
 	        var nameElement = document.getElementById("inputURL");
 	        
@@ -266,7 +266,7 @@ var websiteName = websiteSplit[1];
 
 	        document.getElementById("someDiv").innerHTML += websiteURLlocal;
 	        
-	        return websiteSplit[1];
+	        // return websiteSplit[1];
 	      }
 	</script>
 	
