--- a/statseo.html
+++ b/statseo.html
@@ -262,7 +262,7 @@ var websiteName = websiteSplit[1];
 	      {
 	        var nameElement = document.getElementById("inputURL");
 	        
-	        var websiteURLocal = nameElement.value;
+	        var websiteURLlocal = nameElement.value;
 
 	        document.getElementById("someDiv").innerHTML += websiteURLlocal;
 	        
