--- a/statseo.html
+++ b/statseo.html
@@ -264,7 +264,7 @@ var websiteName = websiteSplit[1];
 	        
 	        var websiteURLlocal = nameElement.value;
 
-	        document.getElementById("someDiv").innerHTML += websiteURLlocal;
+	        document.getElementById("someDiv").innerHTML + websiteURLlocal;
 	        
 	        // return websiteSplit[1];
 	      }
