--- a/statseo.html
+++ b/statseo.html
@@ -190,7 +190,7 @@ function getWebsiteName() {
 	$(document).ready(function(getWebsiteName()) {
 	    $('#example3').dataTable( {
 	        "bProcessing": true,
-	        "sAjaxSource": "/json/summary/"+getWebsiteName()+"_Xhat_11-Nov-13.json",
+	        "sAjaxSource": "/json/summary/"+websiteName+"_Xhat_11-Nov-13.json",
 	        "sAjaxDataProp": "onsite",
 			"aaSorting": [[ 2, "desc" ]],
 		    "aoColumns": [
