--- a/statseo.html
+++ b/statseo.html
@@ -175,11 +175,11 @@ text {
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 
-function getWebsiteName() {
-  var urlFull = document.getElementById("inputURL");
-  var websiteSplitDyn = urlFull.split(".");
-  return websiteSplitDyn[1];
- }
+// function getWebsiteName() {
+//   var urlFull = document.getElementById("inputURL");
+//   var websiteSplitDyn = urlFull.split(".");
+//   return websiteSplitDyn[1];
+//  }
 
 	jQuery(document).ready(function($) {
 	      $(".clickableRow").click(function() {
