--- a/statseo.html
+++ b/statseo.html
@@ -187,7 +187,7 @@ var websiteName = websiteSplit[1];
 	      });
 	});
 	
-	$(document).ready(function(getWebsiteName()) {
+	$(document).ready(function() {
 	    $('#example3').dataTable( {
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/summary/"+websiteName+"_Xhat_11-Nov-13.json",
