API info pages mods take II

--- a/api.html
+++ b/api.html
@@ -61,10 +61,10 @@
           <h2>
             API Cost
           </h2>
-          <p>
-            The cost per URL request is X.XX GBP, or X.XX GBP if Google Analytics
-            access has been granted to us for the URL's domain.
+          			<p>
+            The cost per URL request is 0.01 MathSight API credits. For purchasing of credits please contact [INSERT ADDRESS]@mathsight.org.
           </p>
+ 			
           <p>
           </p>
         </div>
@@ -450,8 +450,10 @@
           1. Count of potentially healthy/neutral/harmful URLs
         </h3>
         <p>
-          Per request cost: £X.XX, with Google Analytics access for this domain
+         <!-- 
+ Per request cost: £X.XX, with Google Analytics access for this domain
           £X.XX
+ -->
         </p>
         <table class="table">
           <tbody>
@@ -546,10 +548,12 @@
         <h3 id="statSeoDef">
           2. Breakdown of diagnosis by influential feature
         </h3>
-        <p>
+        <!-- 
+<p>
           Per request cost: £X.XX, with Google Analytics access for this domain
           £X.XX
         </p>
+ -->
         <p>
           Query example:
         </p>
@@ -667,10 +671,12 @@
         <h3 id="highlightsDef">
           3. Drilldown: Which URLs are 'harmful' to your domain?
         </h3>
-        <p>
+        <!-- 
+<p>
           Per request cost: £X.XX, with Google Analytics access for this domain
           £X.XX
         </p>
+ -->
         <div>
           <table class="table">
             <tbody>
