API info pages mods take II

--- a/api.html
+++ b/api.html
@@ -427,22 +427,22 @@
         <hr>
         <p>
           <a href="#htmlFeatDef">
-            1. A high level summary of the onsite and offsite health status of your chosen domain. This is based upon our StatSEO Quotient figure - a measure of attractiveness to Google's search algorithm. </a>
+            1. Count of potentially healthy/neutral/harmful URLs</a> - A high level summary of the onsite and offsite health status of your chosen domain. This is based upon our StatSEO Quotient figure - a measure of attractiveness to Google's search algorithm
           &nbsp;
         </p>
         <p>
         </p>
         <div>
-          <a href="#statSeoDef"><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>2. A breakdown by the most influential features affecting the bottom line; your domain's organic search performance.&nbsp;</a>
+          <a href="#statSeoDef"><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>
+          2. A breakdown by the most influential features </a> - this shows you exactly what is affecting the bottom line; your domain's organic search performance.&nbsp;
           <div>
-            <a href="#highlightsDef"></a>
+            
           </div>
         </div>
         <div>
-          <a href="#statSeoDef"><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>3. A list of the most potentially harmful URLs, according to the assessment of page feature values.&nbsp;</a>
-          <div>
-            <a href="#highlightsDef"></a>
-          </div>
+          <a href="#highlightsDef"><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br>
+          3. A list of the most potentially harmful URLs </a> - according to the assessment of page feature values.&nbsp;
+          <div> </div>
         </div>
       </div>
       <div class="well">
