API info pages mods take II

--- a/api.html
+++ b/api.html
@@ -62,7 +62,7 @@
             API Cost
           </h2>
           			<p>
-            The cost per URL request is 0.01 MathSight API credits. For purchasing of credits please contact [INSERT ADDRESS]@mathsight.org.
+            The cost per URL request is 0.01 MathSight API credits. To purchase credits please contact [INSERT ADDRESS]@mathsight.org.
           </p>
  			
           <p>
@@ -87,7 +87,7 @@
           How do I get started?
         </h3>
         <p>
-          Contact us at tech@mathsight.org to register your chosen domains and get
+          Contact us at [INSERT ADDRESS]@mathsight.org to register your chosen domains and get
           your MathSight key and API credits.
         </p>
       </div>
@@ -97,7 +97,8 @@
         </h3>
         <hr>
         <p>
-          Our change log (to be announced once the first set of changes are made).
+          Here we will announce any new versions of our API. Released versions are 'final' and will not change.
+          Any new version will have accompanying release notes, and as a customer you decide whether to move to the new version.
         </p>
       </div>
       <div class="well">
