API info pages mods take II

--- a/api.html
+++ b/api.html
@@ -87,8 +87,8 @@
           How do I get started?
         </h3>
         <p>
-          Contact us at [INSERT ADDRESS]@mathsight.org to register your chosen domains and get
-          your MathSight key and API credits.
+          Contact us at [INSERT ADDRESS]@mathsight.org to register your chosen domains, get
+          your MathSight key and top up with API credits.
         </p>
       </div>
       <div class="well">
@@ -593,6 +593,17 @@
         <p>
           Response example:
         </p>
+        
+        <pre><code>li.L0,
+li.L1,
+li.L2,
+li.L3,
+li.L5,
+li.L6,
+li.L7,
+li.L8 { list-style-type: none }
+</code></pre>
+
         <div class="control-group">
           <div class="controls">
           </div>
