API info pages mods take II

--- a/api.html
+++ b/api.html
@@ -594,21 +594,34 @@
           Response example:
         </p>
         
-        <pre><code>li.L0,
-li.L1,
-li.L2,
-li.L3,
-li.L5,
-li.L6,
-li.L7,
-li.L8 { list-style-type: none }
+        <pre><code>
+        {
+ "result": [ 
+{ 
+"average_backlink_flesch_reading_ease": [1,553,-0.24,0,0], 
+ "number_of_images_missing_alt": [2,553,-0.24,0,0], 
+"number_of_embedded_javascripts": [3,254,-0.11,299,-0.13], 
+"title_number_of_dictionary_words": [4,299,-0.13,254,-0.11], 
+ "number_of_images": [5,531,-0.21,22,-0.03], 
+"number_of_scripts": [6,0,0,553,-0.24], 
+ "ratio_of_common_words_to_total": [7,211,-0.1,342,-0.14], 
+"number_of_inline_css_styles": [8,542,-0.24,11,-0], 
+"number_of_images_in_body": [9,523,-0.21,30,-0.03], 
+ "html5_detected": [10,0,0,553,-0.24]
+...
+}
+]
+} 
 </code></pre>
 
-        <div class="control-group">
+       <!-- 
+ <div class="control-group">
           <div class="controls">
           </div>
         </div>
-        <div>
+ -->
+       <!-- 
+ <div>
           <div>
             <br>
             <div>
@@ -667,10 +680,12 @@ li.L8 { list-style-type: none }
             </div>
           </div>
         </div>
+ -->
         <p>
         </p>
         <br>
-        <div>
+       <!-- 
+ <div>
           <div>
             <div>
               <div>
@@ -678,6 +693,7 @@ li.L8 { list-style-type: none }
             </div>
           </div>
         </div>
+ -->
       </div>
       <div class="well">
         <h3 id="highlightsDef">
