API info pages mods take II

--- a/api.html
+++ b/api.html
@@ -460,29 +460,29 @@
           <tbody>
             <tr>
               <td>
-                ONSITE
+                ONSITE:
               </td>
               <td>
-                https://api.mathsight.org/ms_api/v1/count?target=http%3A%2F%2Fwww.mydomain.com&amp;type=onsite&amp;token={
-                Your MathSight key }
-              </td>
-            </tr>
-            <tr>
-              <td>
-                OFFSITE
-              </td>
-              <td>
-                https://api.mathsight.org/ms_api/v1/count?target=http%3A%2F%2Fwww.mydomain.com&amp;type=offsite&amp;token={
-                Your MathSight key }
+                <pre><code>https://api.mathsight.org/ms_api/v1/count?target=http%3A%2F%2Fwww.mydomain.com&amp;type=onsite&amp;token={
+                Your MathSight key }</code></pre>
               </td>
             </tr>
             <tr>
               <td>
-                FULLSITE
+                OFFSITE:
               </td>
               <td>
-                https://api.mathsight.org/ms_api/v1/count?target=http%3A%2F%2Fwww.mydomain.com&amp;type=fullsite&amp;token={
-                Your MathSight key }
+                <pre><code>https://api.mathsight.org/ms_api/v1/count?target=http%3A%2F%2Fwww.mydomain.com&amp;type=offsite&amp;token={
+                Your MathSight key }</code></pre>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                FULLSITE:
+              </td>
+              <td>
+                <pre><code>https://api.mathsight.org/ms_api/v1/count?target=http%3A%2F%2Fwww.mydomain.com&amp;type=fullsite&amp;token={
+                Your MathSight key }</code></pre>
               </td>
             </tr>
           </tbody>
