--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -168,7 +168,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example1').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[1],
 			"aoColumns": [
 			        { "mData": "html_id" },
@@ -182,7 +182,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example2').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[2],
 			"aoColumns": [
 			        { "mData": "html_id" },
@@ -196,7 +196,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example3').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[3],
 			"aoColumns": [
 			        { "mData": "html_id" },
@@ -210,7 +210,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example4').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[4],
 			"aoColumns": [
 			        { "mData": "html_id" },
@@ -224,7 +224,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example5').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[5],
 			"aoColumns": [
 			        { "mData": "html_id" },
@@ -238,7 +238,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example6').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[6],
 			"aoColumns": [
 			        { "mData": "html_id" },
@@ -252,7 +252,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example7').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[7],
 			"aoColumns": [
 			        { "mData": "html_id" },
@@ -266,7 +266,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example8').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[8],
 			"aoColumns": [
 			        { "mData": "html_id" },
@@ -280,7 +280,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example9').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[9],
 			"aoColumns": [
 			        { "mData": "html_id" },
@@ -294,7 +294,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 	$(document).ready(function() {
 		$('#example10').dataTable( {
 			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill_11-Nov-13.json",
+			"sAjaxSource": "/json/drilldown/5_"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[10],
 			"aoColumns": [
 			        { "mData": "html_id" },
