--- a/statseo.html
+++ b/statseo.html
@@ -240,7 +240,14 @@ var websiteName = websiteSplit[1];
 			"aaSorting": [[ 2, "desc" ]],
 			"aoColumns": [
 			null,
-			null,
+		   { "mData": null , //its null here because history column will contain the mRender
+		      "mRender" : function ( data, type, full) {
+		      	return '<a href="offsite_SQ_drilldown.html#F'+ full.DT_RowId +'">'+full[1]+'</a>';
+		      }
+			  // return '<a href="?action=student_report&studentUID='+ data.DT_RowId + '">' + data + '</a>';
+			  // /%3C?php%20echo%20base_url();%20?%3Eoperations/display/number%20of%20dhtml%20scripts
+			  // /%3C?php%20echo%20base_url();%20?%3Eoperations/display/maximum%20length%20of%20h2
+		    },
 			null,
 			null,
 			{"bVisible": false},
